fix profile dropdown spacing

--- a/src/scss/components/profile.scss
+++ b/src/scss/components/profile.scss
@@ -70,3 +70,9 @@
   height: 100%;
   transform: translateY(2px);
 }
+
+// profile name on dropdown menu that will probably become a link to ORCID account
+.te-dropdown-menu span.profile-name {
+  margin-bottom: 5px;
+  display: block;
+}
